test-data-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-data
  namespace: app
spec:
  serviceAccountName: data-service-sa
  containers:
  - name: aws-cli
    image: amazon/aws-cli
    command: ["sleep", "3600"]
  restartPolicy: Never
